Stop font blowing up on small landscape screens

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -315,3 +315,9 @@ a.back-to-the-top {
     text-decoration: none;
 }
 
+@media (orientation: landscape) and (max-device-width: 599px) {
+    p {
+        font-size: 8px;
+        line-height: 16px;
+    }
+}
